--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,21 @@
 {
   "name": "Pro Document Viewer",
   "short_name": "DocViewer",
-  "start_url": ".",
+  "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#1a1a1a",
-  "theme_color": "#292929",
+  "background_color": "#121212",
+  "theme_color": "#00bcd4",
+  "orientation": "portrait",
   "icons": [
-    {"src": "icon.png", "sizes": "192x192", "type": "image/png"},
-    {"src": "icon512.png", "sizes": "512x512", "type": "image/png"}
+    {
+      "src": "icons/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
   ]
-  "main": "electron-main.js",
-"scripts": {
-  "start": "electron ."
-}
-
 }
